# anansi

./: .env.example  CLAUDE.md  README.md  agent_config.json  docker-compose.yml  index.json  main.py  pyproject.toml
agent/: db.py  llm_factory.py  logging_config.py  main.py  prompts.json  prompts.py  state.py
agent/nodes/: evaluator.py  generator.py  interviewer.py  persister.py  planner.py  selector.py
agent/tools/: file_loader.py
app/: server.py  session.py
db/: init.sql
docs/wiki/: Getting-Started.md  Home.md  How-It-Works.md  Your-Knowledge-Base.md
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: QuizView.css  QuizView.tsx  Results.css  Results.tsx  TopicForm.css  TopicForm.tsx
wiki/: multi-agent-overview.md
